--- a/HospitalManager.Client/Components/Layout/NavMenu.razor
+++ b/HospitalManager.Client/Components/Layout/NavMenu.razor
@@ -10,13 +10,13 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi" aria-hidden="true"></span> Home
+                <span class="bi" aria-hidden="true"></span> Domov
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link d-flex align-items-center" href="patients">
                 <span class="bi" aria-hidden="true"></span>
-                <span>Patients</span>
+                <span>Pacienti</span>
             </NavLink>
         </div>
         <div class="nav-item px-3">
