--- a/HospitalManager.Client/Components/Layout/Patient/ProfileField.razor
+++ b/HospitalManager.Client/Components/Layout/Patient/ProfileField.razor
@@ -2,7 +2,7 @@
 
 <div class="form-group mb-4">
     <label for="inputField" class="form-label text-primary fw-bold">@Text</label>
-    <input id="inputField" class="form-control border-success" placeholder="@Value"/>
+    <input id="inputField" class="form-control border-success" placeholder="@Value" readonly/>
 </div>
 
 
