--- a/HospitalManager.Client/Components/Pages/pacient/Examinations.razor
+++ b/HospitalManager.Client/Components/Pages/pacient/Examinations.razor
@@ -3,15 +3,20 @@
 @using HospitalManager.Client.Components.Layout.Patient
 @using Microsoft.AspNetCore.Authorization
 
-<h1 class="text-primary fw-bold">Moje aktívne požiadavky (pocet)</h1>
-<p class="text-muted">
-    Tu nájdete prehľad Vašich doposiaľ zadaných požiadaviek v tejto ordinácii. Kliknutím na požiadavku zobrazíte jej detaily a prebiehajúcu komunikáciu.
-</p>
+<h1 class="text-primary fw-bold">Môj zoznam vyšetrení (pocet)</h1>
 
-<button type="button" class="btn btn-success m-3" @onClick="OnCreateNewRequestClick">Vytvoriť novú požiadavku</button>
+<div class="dropdown m-3">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        Vyberte lekára, ktorý vás vyšetroval.
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <li><a class="dropdown-item" href="#">Možnosť 1</a></li>
+        <li><a class="dropdown-item" href="#">Možnosť 2</a></li>
+        <li><a class="dropdown-item" href="#">Možnosť 3</a></li>
+    </ul>
+</div>
 
-<h4 class="text-primary fw-bold">Vyriešené požiadavky</h4>
-<p>Tu nájdete prehľad minulých požiadaviek v tejto ordinácii. V detaile si zobrazíte podrobnosti.</p>
+<p>Tu nájdete prehľad Vašich vyšetrení. Kliknutím na detail zobrazíte detaily vyšetrenia.</p>
 
 @for (int i = 0; i < 3; i++)
 {
@@ -21,8 +26,10 @@
 
 
 @code {
-    private void OnCreateNewRequestClick()
-    {
+    // [Inject] private NavigationManager NavigationManager { get; set; }
 
-    }
+    // private void OnCreateNewRequestClick(int id)
+    // {
+    //     // NavigationManager.NavigateTo($"/examinations/detail={id}");
+    // }
 }
