--- a/HospitalManager.Client/Components/Pages/pacient/ProfilPacienta.razor
+++ b/HospitalManager.Client/Components/Pages/pacient/ProfilPacienta.razor
@@ -2,6 +2,10 @@
 @attribute [Authorize(Roles = "Pacient")]
 @using HospitalManager.Client.Components.Layout.Patient
 @using Microsoft.AspNetCore.Authorization
+@using System.Text.Json
+@using System.Text.Json.Serialization
+
+@inject IHttpClientFactory httpClientFactory
 
 <div class="container row">
 
@@ -16,6 +20,7 @@
     </div>
 
     <div class="ms-4">
+
         <ProfileField Text="Meno" Value="@Name"/>
 
         <ProfileField Text="Priezvisko" Value="@Surname" />
@@ -24,11 +29,8 @@
 
         <ProfileField Text="E-mail" Value="@Mail" />
 
-        <ProfileField Text="Ulica" Value="@Street" />
+        <ProfileField Text="Rodné číslo" Value="@BirthNumber" />
 
-        <ProfileField Text="Mesto" Value="@City" />
-
-        <ProfileField Text="PSČ" Value="@PostCode" />
     </div>
 
 
@@ -38,19 +40,106 @@
     </div>
 
     <div class="ms-4">
-        <ProfileField Text="Zdravotná poisťovňa"/>
+        <ProfileField Text="Zdravotná poisťovňa" Value="@Insurance"/>
     </div>
 
-    <button type="button" class="btn btn-success w-25 m-4">Uložiť</button>
+    @* <button type="button" class="btn btn-success w-25 m-4">Uložiť</button> *@
 </div>
 
 
 @code {
-    public string Name { get; set; } = "michal";
-    public string Surname { get; set; } = "bezo";
-    public string Phone { get; set; } = "526622";
-    public string Mail { get; set; } = "michalko@gmail.com";
-    public string Street { get; set; } = "Vajnorska";
-    public string City { get; set; } = "Bratislava";
-    public string PostCode { get; set; } = "255 65";
+    private Profil profile = new Profil();
+
+    public string BirthNumber { get; set; } = "Loading";
+    public string Name { get; set; } = "Loading";
+    public string Surname { get; set; } = "Loading";
+    public string Phone { get; set; } = "Loading";
+    public string Mail { get; set; } = "Loading";
+    public string Insurance { get; set; } = "Loading";
+
+    protected override async Task OnInitializedAsync()
+    {
+        var httpClient = httpClientFactory.CreateClient("APIClient");
+
+        try
+        {
+            var request = new HttpRequestMessage(HttpMethod.Get, "api/patients/1?expandPerson=true");
+            var response = await httpClient.SendAsync(request, HttpCompletionOption.ResponseHeadersRead);
+            response.EnsureSuccessStatusCode();
+            var responseString = await response.Content.ReadAsStringAsync();
+            Console.WriteLine(responseString);
+
+            profile = JsonSerializer.Deserialize<Profil>(responseString);
+
+            Console.WriteLine(profile.Person.FirstName);
+
+            BirthNumber = profile.BirthNumber;
+            Name = profile.Person.FirstName;
+            Surname = profile.Person.LastName;
+            Phone = profile.Person.Telephone;
+            Mail = profile.Person.Email;
+            Insurance = profile.InsuranceId.ToString();
+        }
+        catch (HttpRequestException ex)
+        {
+
+            Console.WriteLine($"Request error: {ex.Message}");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Unexpected error: {ex.Message}");
+        }
+    }
+
+    public class Profil
+    {
+        [JsonPropertyName("id")]
+        public int Id { get; set; }
+
+        [JsonPropertyName("insuranceId")]
+        public int InsuranceId { get; set; }
+
+        [JsonPropertyName("birthNumber")]
+        public string BirthNumber { get; set; }
+
+        [JsonPropertyName("allergies")]
+        public string? Allergies { get; set; }
+
+        [JsonPropertyName("bloodGroup")]
+        public string? BloodGroup { get; set; }
+
+        [JsonPropertyName("medications")]
+        public string? Medications { get; set; }
+
+        [JsonPropertyName("vaccines")]
+        public string? Vaccines { get; set; }
+
+        [JsonPropertyName("person")]
+        public Person Person { get; set; }
+    }
+
+    public class Person
+    {
+        [JsonPropertyName("birthNumber")]
+        public string BirthNumber { get; set; }
+
+        [JsonPropertyName("firstName")]
+        public string FirstName { get; set; }
+
+        [JsonPropertyName("lastName")]
+        public string LastName { get; set; }
+
+        [JsonPropertyName("email")]
+        public string Email { get; set; }
+
+        [JsonPropertyName("telephone")]
+        public string Telephone { get; set; }
+
+        [JsonPropertyName("addressId")]
+        public int AddressId { get; set; }
+
+        [JsonPropertyName("userId")]
+        public int UserId { get; set; }
+    }
+
 }
