--- a/HospitalManager.IDP/Pages/Account/Registration/Index.cshtml
+++ b/HospitalManager.IDP/Pages/Account/Registration/Index.cshtml
@@ -17,8 +17,8 @@
                             <input type="hidden" asp-for="Input.ReturnUrl"/>
                             <fieldset>
                                 <div class="form- group">
-                                    <label asp-for="Input.Username"></label>
-                                    <input class="form-control" placeholder="Username" asp-for="Input.Username" autofocus>
+                                    <label asp-for="Input.Email"></label>
+                                    <input class="form-control" placeholder="Email" asp-for="Input.Email" autofocus>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Input.Password"></label>
