--- a/HospitalManager.Client/Components/Pages/Home.razor
+++ b/HospitalManager.Client/Components/Pages/Home.razor
@@ -54,7 +54,7 @@
 
         try
         {
-            var request = new HttpRequestMessage(HttpMethod.Get, "/api/");
+            var request = new HttpRequestMessage(HttpMethod.Get, "/api/recipe/");
             var response = await httpClient.SendAsync(request, HttpCompletionOption.ResponseHeadersRead);
 
             response.EnsureSuccessStatusCode();
