--- a/HospitalManager.Client/Components/Layout/NavMenu.razor
+++ b/HospitalManager.Client/Components/Layout/NavMenu.razor
@@ -38,9 +38,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link d-flex align-items-center" href="patients">
-                <span class="bi bi-person fs-4 me-2" aria-hidden="true"></span>
-                <span>Patients</span>
+            <NavLink class="nav-link" href="examinations">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Examinations
             </NavLink>
         </div>
         <div class="nav-item px-3">
